--- a/Qbert/Qbert.vcxproj.filters
+++ b/Qbert/Qbert.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="ScoreComponent.cpp">
       <Filter>Source Files\UI</Filter>
     </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CharacterStates.h">
@@ -178,6 +181,9 @@
     </ClInclude>
     <ClInclude Include="LivesComponent.h">
       <Filter>Header Files\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="Game.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
