--- a/Qbert/Qbert.vcxproj.filters
+++ b/Qbert/Qbert.vcxproj.filters
@@ -201,7 +201,7 @@
       <Filter>Header Files\UI</Filter>
     </ClInclude>
     <ClInclude Include="RoundCounterComponent.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\UI</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
