added change to tile icon

--- a/Qbert/Qbert.vcxproj
+++ b/Qbert/Qbert.vcxproj
@@ -226,6 +226,7 @@ xcopy "$(SolutionDir)3rdParty\steamworks\redistributable_bin\win64\*.dll" "$(Out
     <ClCompile Include="SlickSamComponent.cpp" />
     <ClCompile Include="SlickSamStates.cpp" />
     <ClCompile Include="TileComponent.cpp" />
+    <ClCompile Include="TileIconComponent.cpp" />
     <ClCompile Include="TitleComponent.cpp" />
     <ClCompile Include="UggWrongwayComponent.cpp" />
     <ClCompile Include="UggWrongwayStates.cpp" />
@@ -254,6 +255,7 @@ xcopy "$(SolutionDir)3rdParty\steamworks\redistributable_bin\win64\*.dll" "$(Out
     <ClInclude Include="SlickSamStates.h" />
     <ClInclude Include="Sounds.h" />
     <ClInclude Include="TileComponent.h" />
+    <ClInclude Include="TileIconComponent.h" />
     <ClInclude Include="TitleComponent.h" />
     <ClInclude Include="UggWrongwayComponent.h" />
     <ClInclude Include="UggWrongwayStates.h" />
